tdf#145716 docx export: round-trip doNotUseHTMLParagraphAutoSpacing

Amazingly, the round-tripping of this compatibility flag
was not implemented when it was defined/imported in 2012.

Also amazingly, this hasn't caused an uproar
when changing formats from ODT->DOCX.

The layout difference can easily be very significant,
since with HTML auto spacing, the maximum of the below and above
paragraph spacing is used,
while in LO native mode, the result is cumulative - they are added.

make CppunitTest_sw_ooxmlimport CPPUNIT_TEST_NAME=testN778140

make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf145716_nonHTMLspacing

Change-Id: Ib18abf5e019c8b434ee13fef42b948ea282b2cb6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/206417
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>